# todo-list

./: .pre-commit-config.yaml  README.md
.github/workflows/: todo-ci.yml
backend/: .coveragerc  .flake8  .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
backend/contrib/: env-sample  env-sample-ci
backend/todo/: django_assertions.py  settings.py  urls.py
backend/todo/core/: admin.py  conftest.py  models.py
backend/todo/core/migrations/: 0001_initial.py
backend/todo/core/tests/: test_models.py
