[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Lista Todo"
authors = ["herbetyp <herbetyp.job@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"
black = "^20.8b1"
pre-commit = "^2.10.1"
model-bakery = "^1.2.1"
flake8 = "^3.8.4"
django-extensions = "^3.1.1"
ipython = "^7.20.0"
jedi = "0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
